# hknweb

./: .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  CONTRIBUTING.txt  Dockerfile  LICENSE  Makefile  Pipfile  README-CONDA.md  README.md  Vagrantfile  bbtest.txt.gpg  client_secret.json  coverage.json  credentials.json  db.cnf  db.sqlite3  docker-compose.yaml  fabfile.py  flake.nix  init_database.py  manage.py  provision_frontend.sh  pyproject.toml  pytest.ini  requirements-dev-minimal.txt  requirements-dev.txt  requirements-minimal.txt  requirements.txt  run
.github/workflows/: codeql.yml  security_test.yaml  setup_test_env.sh  setup_test_environment.yaml  test.yaml  test_and_deploy.yaml  test_deploy.yaml  test_formatting.yaml  test_logic_and_coverage.yaml  test_python_logic.yaml  test_security.yaml  unit_tests.yaml
cand/: apps.py  models.py  urls.py  views.py
compserv_djangoproj/: manage.py
compserv_djangoproj/compserv_djangoproj/: asgi.py  settings.py  urls.py  wsgi.py
compserv_djangoproj/djangoenv/: pyvenv.cfg
compserv_djangoproj/polls/: models.py  tests.py
config/: hknweb-dev.yml  hknweb-prod.yml  requirements.txt
config/deploy/: github_actions.json  local.json  prod.json  shared.json
config/systemd/: hknweb.service
deploy/: git.py  path.py
django-tutorial-savitbhat/tutorial-env/: pyvenv.cfg
events/: admin.py  models.py  urls.py  views.py
events/migrations/: 0001_initial.py
hknweb/: admin.py  forms.py  google_drive_utils.py  init_permissions.py  models.py  settings.py  urls.py  utils.py  wsgi.py
hknweb/academics/: admin.py  apps.py  models.py  permissions.py  urls.py  views.py
hknweb/alumni/: admin.py  forms.py  models.py  urls.py  views.py
hknweb/candidate/: admin.py  apps.py  constants.py  cron_jobs.py  forms.py  models.py  urls.py  utils.py  utils_candportal.py  views.py
hknweb/course_surveys/: README.md  apps.py  constants.py  tests.py  urls.py  views.py
hknweb/courses/: admin.py  models.py  urls.py  views.py
hknweb/coursesemester/: admin.py  apps.py  models.py
mysite/: settings.py
polls/: admin.py  models.py  tests.py  views.py
scripts/: install_miniconda_linux.sh  run.sh  run_github_actions.sh  setup_env.sh  setup_test_env.sh
templates/: application.html.erb  base.html  portal.html
tests/: end_to_end_test.py  test_end_to_end.py  test_handler_privacy.py  utils.py
upeweb/: forms.py  init_permissions.py  models.py  urls.py  utils.py  wsgi.py
(+1235 files in other folders)
