[tool.poetry]
name = "hknweb"
version = "0.1.0"
description = "Eta Kappa Nu, Mu Chapter website"
authors = ["HKN Mu Chapter Computing Services <compserv@hkn.eecs.berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
django = "^2.2.28"
whitenoise = "^4.1.1"
pillow = "^8.4.0"
django-markdownx = "^4.0.2"
bleach = "^4.1.0"
gunicorn = "^19.9.0"
fabric = "^3.2.2"
social-auth-app-django = "^4.0.0"
django-autocomplete-light = "^3.9.4"
djangorestframework = "^3.11.0"
google-api-python-client = "^2.98.0"
google-auth-oauthlib = "^1.0.0"
mysqlclient = "~2.1.0"
urllib3 = "^1.26.6"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
coverage = { extras = ["toml"], version = "^7.3.1" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
extend-exclude = '(.*migrations)/'

[tool.coverage.run]
source = ["."]
command_line = "manage.py test"
omit = [
    'fabfile.py',
    'hknweb/wsgi.py',
    'manage.py',
    '*apps.py',
    '*test_*.py',
    'hknweb/settings/*.py',
]

[tool.coverage.report]
skip_covered = true
sort = "miss"
fail_under = 85
